# mandelbrot_sfml

./: LICENSE
mandelbrot_sfml/: CMakeLists.txt  main.cpp
